[package]
name = "alone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11" }
# bevy_magic_light_2d = { git = "https://github.com/zaycev/bevy-magic-light-2d", branch = "main"}

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3